[metadata]
name = asdfuzz
version = 0.0.0
author = Steven van Gemert
author_email = steven@vangemert.dev
description = Web application fuzzer that automatically detects and fuzzes data in HTTP requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spmvg/asdfuzz
license = MIT
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    typer
    keyboard

[options.packages.find]
where = src
